--- a/SCSS/package.json
+++ b/SCSS/package.json
@@ -1,12 +1,12 @@
-{
-  "name": "scss",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch scss/style.scss -o css"
-  },
-  "author": "Eze Bernardine May",
-  "license": "ISC"
-}
+  {
+    "name": "scss",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "scss": "node-sass --watch  scss -o css"
+    },
+    "author": "Eze Bernardine May",
+    "license": "ISC"
+  }
